# pyramid_localize

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .rstcheck.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  go.mod  go.sum  main.go  mapping.cfg  pylama.ini  pylintrc  pyproject.toml  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py  tbump.toml  towncrier.toml  tox.ini
.github/workflows/: automerge.yml  build.yml  linters.yml  pr-check.yml  pypi.yml  release.yaml  release.yml  tests.yml
docs/source/: advanced.rst  api.rst  basic.rst  conf.py  index.rst
docs/source/api/: models.rst  negotiator.rst  request.rst  tools.rst  views.rst
magefiles/: magefile.go
newsfragments/: +2e079993.misc.rst  +86d81d04.break.rst  +e29c712e.misc.rst  +ed210ecc.misc.rst  +ff68c4e5.misc.rst  193.misc.rst  403.misc.rst  408.misc.rst  410.misc.rst  416.misc.rst  425.bugfix.rst  426.misc.rst  437.misc.rst  438.bugfix.rst  438.misc.rst  460.misc.rst  482.misc.rst  509.break.rst  522.misc.rst
pyramid_localize/: __init__.py  models.py  negotiator.py  request.py  subscribers.py  tools.py
pyramid_localize/config/: config.yml
pyramid_localize/resources/templates/: _list.mako  index.mako  layout.mako
pyramid_localize/routing/: __init__.py  predicates.py
pyramid_localize/subscribers/: __init__.py  fake.py  i18n.py
pyramid_localize/views/: __init__.py  catalog.py  catalogue.py
src/pyramid_localize/: __init__.py  models.py  negotiator.py  request.py  tools.py
src/pyramid_localize/resources/locale/: pyramid_localize.pot
src/pyramid_localize/resources/templates/: _list.mako
src/pyramid_localize/routing/: predicates.py
src/pyramid_localize/subscribers/: i18n.py
src/pyramid_localize/views/: catalogue.py
tests/: __init__.py  conftest.py  test_destination.py  test_dummy.py  test_locale_negotiator.py  test_negotiator.py  test_predicates.py  test_request.py  test_subscribers.py  test_tools.py
