[metadata]
name = pyramid_localize
version = 1.0.1
url = http://github.com/fizyk/pyramid_localize
project_urls =
    Bug Tracker = https://github.com/fizyk/pyramid_localize/issues
    Changelog = https://github.com/fizyk/pyramid_localize/blob/v1.0.1/CHANGES.rst
description = pyramid_localize provides translation methods for pyramid, and means to reload translations without stopping the application
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = pyramid, babel, i18n, l10n
license = MIT License
author = Grzegorz Śliwiński
author_email = fizyk+pypi@fizyk.dev
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Pyramid
    Topic :: Database :: Front-Ends
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:
package_dir =
    =src
install_requires =
    pyramid >= 1.5
    pyramid_basemodel
    pyramid_mako
    pycountry >= 18.12.8

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest >= 3.3.0
    pytest-pyramid >= 0.3.1
    pytest-cov >= 2.6.0
    mock >= 2.0.0
    zope.sqlalchemy >= 1.2.0
docs =
    sphinx
babel =
    Babel >= 1.0

[pycodestyle]
max-line-length = 120
exclude = docs/*,build/*,venv/*

[pydocstyle]
ignore = D203,D212
match = '(?!docs|build|venv).*\.py'

[extract_messages]
add_comments = TRANSLATORS:
mapping_file = mapping.cfg
output_file = src/pyramid_localize/resources/locale/pyramid_localize.pot
width = 80
